get rid of '/' from url

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: 向島に行こうや
-url: https://nyoho.github.io/go2mukaishima/
+url: https://nyoho.github.io/go2mukaishima
 email: algebraicallyClosedField@gmail.com
 author: Nyoho
 description: 向島(尾道市)を応援するサイトです。23日間脱走受刑者潜伏の可能性による消費の落ち込みや不便ががありました。
