--- a/config.yml
+++ b/config.yml
@@ -2,8 +2,8 @@ title: 向島に行こうや
 url: https://nyoho.github.io/go2mukaishima
 email: algebraicallyClosedField@gmail.com
 author: Nyoho
-description: 向島(尾道市)を応援するサイトです。23日間脱走受刑者潜伏の可能性による消費の落ち込みや不便ががありました。
-description_long: 向島(尾道市)を応援するサイトです。23日間脱走受刑者潜伏の可能性による消費の落ち込みや不便ががありました。
+description: 向島を応援します! 23日間脱走受刑者潜伏の可能性で消費の落ち込みや不便がありました。
+description_long: 向島(尾道市)を応援するサイトです。23日間脱走受刑者潜伏の可能性による消費の落ち込みや不便がありました。
 hashtag: go2mukaishima
 keywords: 向島,尾道,広島
 language: ja
